@startuml
'https://plantuml.com/class-diagram

    class Main {
        +main(args: String[]): void
    }

    class MainMenu {
        ~boardWidth: int
        ~boardHeight: int
        ~playButton: JButton
        ~settingsButton: JButton
        ~aboutButton: JButton
        ~imageBackground: Image
        +paintComponent(g: Graphics): void
    }

    class SettingMenu {
        ~boardWidth: int
        ~boardHeight: int
        ~backButton: JButton
        ~imageBg: Image
        ~soundCheck: JCheckBox
        ~birdSelector: JComboBox~BirdSkins~
        +{static} BIRD_OPTIONS: BirdSkins[]
        +getSelectedBird(): BirdSkins
        +paintComponent(g: Graphics): void
    }

    class AboutMenu {
        ~boardWidth: int
        ~boardHeight: int
        ~backButton2: JButton
        ~imageBg: Image
        ~faceDisplay: JLabel
        +{static} FACE_SIZE: int
        +{static} AUTHORS: AuthorInfo[]
        -showAuthor(author: AuthorInfo): void
        +paintComponent(g: Graphics): void
    }

    class LarpyGame {
        ~boardWidth: int
        ~boardHeight: int
        ~birdImage: Image
        ~backgroundImage: Image
        ~topPipeImage: Image
        ~bottomPipeImage: Image
        ~birdX: int
        ~birdY: int
        ~birdWidth: int
        ~birdHeight: int
        ~pipeX: int
        ~pipeY: int
        ~pipeWidth: int
        ~pipeHeight: int
        ~bird: Bird
        ~velocityX: int
        ~velocityY: int
        ~gravity: int
        ~pipes: ArrayList~Pipe~
        ~random: Random
        ~gameLoop: Timer
        ~frameTimeMs: int
        ~pipeSpawnAccumulate: long
        ~pipeSpawnInterval: int
        ~gameOver: boolean
        ~score: double
        ~highScore: int
        ~level: int
        ~maxLevel: int
        ~scorePerLevel: int
        ~lvlSpeed: int[]
        ~lvlPipeGap: int[]
        ~lvlSpawnInterval: int[]
        ~lvlPipeOffset: int[]
        ~gameStart: boolean
        ~gamePaused: boolean
        ~countdownActive: boolean
        ~countdownStart: long
        ~countdownDuration: int
        -onReturnToMenu: Runnable
        -settings: SettingMenu
        -bgMusic: Clip
        -jumpSoundPath: String
        ~menuButton: JButton
        +setOnReturnToMenu(onReturnToMenu: Runnable): void
        +placePipes(): void
        +updatePipeSpawn(): void
        -updateLevel(): void
        +paintComponent(g: Graphics): void
        +draw(g: Graphics): void
        -drawCountdown(g2: Graphics2D): void
        +move(): void
        +collision(birdA: Bird, pipeB: Pipe): boolean
        -updateCountdown(): void
        +actionPerformed(e: ActionEvent): void
        +keyPressed(e: KeyEvent): void
        -soundEnabled(): boolean
        -startMusic(): void
        -stopMusic(): void
        -returnToMenu(): void
        +keyTyped(e: KeyEvent): void
        +keyReleased(e: KeyEvent): void
    }

    class Bird {
        ~x: int
        ~y: int
        ~height: int
        ~width: int
        ~img: Image
    }

    class Pipe {
        ~x: int
        ~y: int
        ~height: int
        ~width: int
        ~img: Image
        ~passed: boolean
        ~isTop: boolean
    }

    class AuthorInfo {
        +label: String
        +imagepath: String
        +soundPath: String
        +toString(): String
    }

    class BirdSkins {
        +name: String
        +imagePath: String
        +jumpSoundPath: String
        +toString(): String
    }

    class ScoreManager {
        -{static} highScore: int
        +{static} getHighScore(): int
        +{static} updateHighScore(newScore: int): void
    }

    class Sounds {
        +{static} playSound(resourcePath: String): void
        +{static} loadLoopingClip(resourcePath: String): Clip
    }

    JPanel <|-- MainMenu
    JPanel <|-- SettingMenu
    JPanel <|-- AboutMenu
    JPanel <|-- LarpyGame
    ActionListener <|.. LarpyGame
    KeyListener <|.. LarpyGame

    Main --> MainMenu : instantiates
    Main --> SettingMenu : instantiates
    Main --> AboutMenu : instantiates
    Main --> LarpyGame : instantiates/manages

    SettingMenu "1" *-- "*" BirdSkins : BIRD_OPTIONS
    AboutMenu "1" *-- "*" AuthorInfo : AUTHORS

    LarpyGame *-- Bird
    LarpyGame *-- Pipe
    LarpyGame --> SettingMenu : uses settings
    LarpyGame ..> ScoreManager : updates/reads score
    LarpyGame ..> Sounds : plays audio

    AboutMenu ..> Sounds : plays author voice

@enduml